--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+* {
+    font-family: sans-serif;
+    font-size: 1rem;
+}
+
+button {
+    padding: 5px 10px;
+    background-color: yellowgreen;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
 nav {
     display: flex;
     gap: 1rem;
