--- a/src/Pages/Animal/Animal.css
+++ b/src/Pages/Animal/Animal.css
@@ -1,3 +1,12 @@
+.animal {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+}
+
 .animal-list {
     display: flex;
     flex-direction: column;
