--- a/src/Pages/Customer/Customer.css
+++ b/src/Pages/Customer/Customer.css
@@ -1,10 +1,17 @@
+.customer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+}
+
 .customer-list {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-between;
     margin: 0 10px;
-    padding: 2rem;
     gap: 1rem;
 }
-
