--- a/src/Pages/Vaccine/Vaccine.css
+++ b/src/Pages/Vaccine/Vaccine.css
@@ -1,54 +1,66 @@
 .vaccine {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    gap: 50px;
-    width: 95vw;
-    height: 100vh;
-    margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  gap: 50px;
+  width: 95vw;
+  height: 100vh;
+  margin: 10px;
+}
+.animalname-search {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.date-search {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .vaccine-list {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 0 10px;
-    padding: 2rem;
-    gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0 10px;
+  padding: 2rem;
+  gap: 1rem;
 }
 
 .vaccine-newvaccine {
-    display: flex;
-    align-items: center;
-    gap: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .vaccine-updatevaccine {
-    display: flex;
-    align-items: center;
-    gap: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  th, td {
-    border: 1px solid #ddd;
-    text-align: left;
-    padding: 8px;
-  }
-  
-  th {
-    background-color: #f2f2f2;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #f9f9f9;
-  }
-  
-  td > svg {
-    cursor: pointer;
-  }
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th,
+td {
+  border: 1px solid #ddd;
+  text-align: left;
+  padding: 8px;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+td > svg {
+  cursor: pointer;
+}
