export const getAnimalAppointmentDateInRange = async (animalId, startDate, endDate) => { added getDoctorAppointmentDateInRange &

--- a/src/Pages/Appointment/Appointment.css
+++ b/src/Pages/Appointment/Appointment.css
@@ -19,6 +19,18 @@
 
 .appointment-search {
     display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 10px;
+}
+.doctor-daterange {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.animal-daterange {
+    display: flex;
     align-items: center;
     gap: 10px;
 }
